src/custom/snapshots/hugr_llvm__custom__int__test__ineg@llvm14.snap
---
source: src/custom/int.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8 @_hl.main.1(i8 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = sub i8 0, %0
  ret i8 %1
}
